<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/almond">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/header_greetings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_header_name"
                    style="@style/H1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_user_greeting" />

                <TextView
                    android:id="@+id/tv_header_greetings"
                    style="@style/Subhead2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:text="@string/tv_greeting" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginVertical="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="21dp"
                    android:layout_height="25dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_shopping_cart"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_profile_user"
                    tools:ignore="ContentDescription" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/cl_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_banner"
                android:layout_width="match_parent"
                android:layout_height="125dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_banner_disc"
                    tools:ignore="ContentDescription" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.5"
                    android:background="@color/black" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:id="@+id/iv_discount_30"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/ll_banner_discount"
                        android:src="@drawable/img_discount_30"
                        tools:ignore="ContentDescription" />

                    <LinearLayout
                        android:id="@+id/ll_banner_discount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/iv_discount_30"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_disc"
                            style="@style/H2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/tv_info_discount"
                            android:textColor="@color/white"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.3" />

                        <TextView
                            android:id="@+id/tv_desc_disc"
                            style="@style/Subhead3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/tv_discount_desc"
                            android:textColor="@color/white"

                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_list_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_banner">

            <TextView
                android:id="@+id/tv_see_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_see_all"
                style="@style/Subhead3"
                android:gravity="end"
                android:alpha="0.5" />

            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow_list_category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                app:constraint_referenced_ids="ll_category_rice,ll_category_noodle,ll_category_snack,ll_category_drink"
                app:flow_horizontalStyle="spread_inside"
                app:flow_wrapMode="aligned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_see_all" />

            <LinearLayout
                android:id="@+id/ll_category_rice"
                android:layout_width="75dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_category_rice"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_category_rice"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_category_rice"
                    style="@style/Subhead2"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category_noodle"
                android:layout_width="75dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_category_noodle"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_category_noodle"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_category_noodle"
                    style="@style/Subhead2"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category_snack"
                android:layout_width="75dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_category_snack"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_category_snack"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_category_snack"
                    style="@style/Subhead2"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_category_drink"
                android:layout_width="75dp"
                android:layout_height="90dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_category_drink"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_category_drink"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_category_drink"
                    style="@style/Subhead2"
                    android:textAlignment="center" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>